<resources>
    <string name="app_name">HW3_3_1</string>
    <string name="zero">0</string>
    <string name="one">1</string>
    <string name="two">2</string>
    <string name="three">3</string>
    <string name="four">4</string>
    <string name="five">5</string>
    <string name="six">6</string>
    <string name="seven">7</string>
    <string name="eight">8</string>
    <string name="nine">9</string>
    <string name="decimalPoint">.</string>
    <string name="division">/</string>
    <string name="multiplication">*</string>
    <string name="minus">-</string>
    <string name="plus">+</string>
    <string name="submit">=</string>
    <string name="percent">%</string>
    <string name="plus_minus">+/-</string>
    <string name="clearing">C</string>
    <string name="in">In</string>
    <string name="log">log</string>
    <string name="sin">sin</string>
    <string name="cos">cos</string>
    <string name="tg">tg</string>
    <string name="x_y">x^y</string>
    <string name="x_2">x^2</string>
    <string name="x_1">x^-1</string>
    <string name="leftBracket">(</string>
    <string name="rightBracket">)</string>
</resources>