<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/engineerLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/resultEng"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@android:color/background_dark"
        android:gravity="end"
        android:padding="10dp"
        android:text="@string/zero"
        android:textColor="@android:color/white"
        android:textSize="55sp" />

    <LinearLayout
        android:id="@+id/ingenFirstLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/resultEng"
        android:layout_marginTop="5dp"
        android:orientation="horizontal">

        <Button
            android:id="@+id/inBtn"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:backgroundTint="@color/colorIngenPanel"
            android:text="@string/in"
            android:textColor="@android:color/white"
            android:textStyle="bold"
            android:textSize="15sp" />

        <Button
            android:id="@+id/logBtn"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:backgroundTint="@color/colorIngenPanel"
            android:text="@string/log"
            android:textColor="@android:color/white"
            android:textStyle="bold"
            android:textSize="15sp" />

        <Button
            android:id="@+id/sinBtn"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:backgroundTint="@color/colorIngenPanel"
            android:text="@string/sin"
            android:textColor="@android:color/white"
            android:textStyle="bold"
            android:textSize="15sp" />

        <Button
            android:id="@+id/cosBtn"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:backgroundTint="@color/colorIngenPanel"
            android:text="@string/cos"
            android:textColor="@android:color/white"
            android:textStyle="bold"
            android:textSize="15sp" />

        <Button
            android:id="@+id/tgBtn"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:backgroundTint="@color/colorIngenPanel"
            android:text="@string/tg"
            android:textColor="@android:color/white"
            android:textStyle="bold"
            android:textSize="15sp" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/ingenSecondLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/ingenFirstLayout"
        android:layout_marginBottom="5dp"
        android:orientation="horizontal">

        <Button
            android:id="@+id/xyBtn"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:backgroundTint="@color/colorIngenPanel"
            android:text="@string/x_y"
            android:textColor="@android:color/white"
            android:textStyle="bold"
            android:textSize="15sp" />

        <Button
            android:id="@+id/x2Btn"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:backgroundTint="@color/colorIngenPanel"
            android:text="@string/x_2"
            android:textColor="@android:color/white"
            android:textStyle="bold"
            android:textSize="15sp" />

        <Button
            android:id="@+id/x-1Btn"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:backgroundTint="@color/colorIngenPanel"
            android:text="@string/x_1"
            android:textColor="@android:color/white"
            android:textStyle="bold"
            android:textSize="15sp" />

        <Button
            android:id="@+id/leftBracketBtn"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:backgroundTint="@color/colorIngenPanel"
            android:text="@string/leftBracket"
            android:textColor="@android:color/white"
            android:textStyle="bold"
            android:textSize="15sp" />

        <Button
            android:id="@+id/rightBracketBtn"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:backgroundTint="@color/colorIngenPanel"
            android:text="@string/rightBracket"
            android:textColor="@android:color/white"
            android:textStyle="bold"
            android:textSize="15sp" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/firstLineEngLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/ingenSecondLayout"
        android:layout_toStartOf="@id/actionPanelEngLayout"
        android:orientation="horizontal">

        <Button
            android:id="@+id/clearingEngBtn"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:padding="10dp"
            android:text="@string/clearing"
            android:textSize="30sp" />

        <Button
            android:id="@+id/plus-minusEngBtn"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:padding="10dp"
            android:text="@string/plus_minus"
            android:textSize="30sp" />

        <Button
            android:id="@+id/percentEngBtn"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:padding="10dp"
            android:text="@string/percent"
            android:textSize="30sp" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/secondLineEngLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/firstLineEngLayout"
        android:layout_toStartOf="@id/actionPanelEngLayout"
        android:orientation="horizontal">

        <Button
            android:id="@+id/sevenEngBtn"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:padding="10dp"
            android:text="@string/seven"
            android:textSize="30sp" />

        <Button
            android:id="@+id/eightEngBtn"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:padding="10dp"
            android:text="@string/eight"
            android:textSize="30sp" />

        <Button
            android:id="@+id/nineEngBtn"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:padding="10dp"
            android:text="@string/nine"
            android:textSize="30sp" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/thirdLineEngLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/secondLineEngLayout"
        android:layout_toStartOf="@id/actionPanelEngLayout"
        android:orientation="horizontal">

        <Button
            android:id="@+id/fourEngBtn"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:padding="10dp"
            android:text="@string/four"
            android:textSize="30sp" />

        <Button
            android:id="@+id/fiveEngBtn"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:padding="10dp"
            android:text="@string/five"
            android:textSize="30sp" />

        <Button
            android:id="@+id/sixEngBtn"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:padding="10dp"
            android:text="@string/six"
            android:textSize="30sp" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/fourthLineEngLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/thirdLineEngLayout"
        android:layout_toStartOf="@id/actionPanelEngLayout"
        android:orientation="horizontal">

        <Button
            android:id="@+id/oneEngBtn"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:padding="10dp"
            android:text="@string/one"
            android:textSize="30sp" />

        <Button
            android:id="@+id/twoEngBtn"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:padding="10dp"
            android:text="@string/two"
            android:textSize="30sp" />

        <Button
            android:id="@+id/threeEngBtn"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:padding="10dp"
            android:text="@string/three"
            android:textSize="30sp" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/fifthLineEngLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/fourthLineEngLayout"
        android:layout_toStartOf="@id/actionPanelEngLayout"
        android:orientation="horizontal">

        <Button
            android:id="@+id/zeroEngBtn"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:padding="10dp"
            android:text="@string/zero"
            android:textSize="30sp" />

        <Button
            android:id="@+id/decimalPointEngBtn"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:padding="10dp"
            android:text="@string/decimalPoint"
            android:textSize="30sp" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/actionPanelEngLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/ingenSecondLayout"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="5dp"
        android:orientation="vertical">

        <Button
            android:id="@+id/divisionEngBtn"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:backgroundTint="@color/colorIngenPanel"
            android:padding="10dp"
            android:text="@string/division"
            android:textColor="@android:color/white"
            android:textSize="30sp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/multiplicationEngBtn"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:backgroundTint="@color/colorIngenPanel"
            android:padding="10dp"
            android:text="@string/multiplication"
            android:textColor="@android:color/white"
            android:textSize="30sp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/minusEngBtn"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:backgroundTint="@color/colorIngenPanel"
            android:padding="10dp"
            android:text="@string/minus"
            android:textColor="@android:color/white"
            android:textSize="30sp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/plusEngBtn"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:backgroundTint="@color/colorIngenPanel"
            android:padding="10dp"
            android:text="@string/plus"
            android:textColor="@android:color/white"
            android:textSize="30sp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/submitEngBtn"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:backgroundTint="@color/colorIngenPanel"
            android:padding="10dp"
            android:text="@string/submit"
            android:textColor="@android:color/white"
            android:textSize="30sp"
            android:textStyle="bold" />
    </LinearLayout>

</RelativeLayout>